--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "styled-components": "^4.4.1",
+    "react-modal": "^3.11.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "flexboxgrid": "^6.3.1",
+    "react-device-detect": "^1.11.14"
   },
   "scripts": {
     "start": "react-scripts start",
