--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "styled-components": "^4.4.1",
-    "react-modal": "^3.11.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "flexboxgrid": "^6.3.1",
-    "react-device-detect": "^1.11.14"
+    "gh-pages": "^2.2.0",
+    "react": "^16.13.0",
+    "react-device-detect": "^1.11.14",
+    "react-dom": "^16.13.0",
+    "react-modal": "^3.11.1",
+    "react-scripts": "3.4.0",
+    "styled-components": "^4.4.1"
   },
+  "homepage": "https://colwill91.github.io/southwest-log",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
