--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.13.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.0",
-    "react-modal": "^3.11.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^4.4.1"
   },
