--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "3.4.0",
     "styled-components": "^4.4.1"
   },
-  "homepage": "https://colwill91.github.io/southwest-log",
+  "homepage": "http://jp-countryside-services.co.uk",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
